--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -23,7 +23,7 @@ label {
   monitor = 
   text = cmd[update:1000] echo "$(~/.config/Scripts/song-status)"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 14
+  font_size = 10
   font_family = SF Pro Text
   position = 10, -10
   halign = left
@@ -34,33 +34,33 @@ label {
   monitor =
   text = cmd[update:1000] echo "$(~/.config/Scripts/network-status)‎"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 16
+  font_size = 11
   font_family = SF Pro Text
-  position = -35, 512
+  position = -10, -11
   halign = right
-  valign = center
+  valign = top
 }
 
 label {
   monitor =
   text = cmd[update:1000] echo "$(~/.config/Scripts/battery-status)‎"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 19
+  font_size = 12
   font_family = SF Pro Text
-  position = -93, 512
+  position = -55, -10
   halign = right
-  valign = center
+  valign = top
 }
 
 label {
   monitor =
   text = cmd[update:1000] echo "$(~/.config/Scripts/layout-status)‎"
   color = rgba(242, 243, 244, 0.75)
-  font_size = 15
+  font_size = 10
   font_family = SF Pro Text
-  position = -150, 512
+  position = -90, -11
   halign = right
-  valign = center
+  valign = top
 }
 
 label {
@@ -69,9 +69,9 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 20
   font_family = SF Pro Display Bold
-  position = 0, 405
+  position = 0, -100
   halign = center
-  valign = center
+  valign = top
 }
 
 label {
@@ -80,9 +80,9 @@ label {
   color = rgba(242, 243, 244, 0.75)
   font_size = 93
   font_family = SF Pro Display Bold
-  position = 0, 310
+  position = 0, -140
   halign = center
-  valign = center
+  valign = top
 }
 
 image {
@@ -95,31 +95,31 @@ image {
     rotate = 0
     reload_time = -1
     reload_cmd = 
-    position = 0, -353
+    position = 0, 150
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
     monitor =
-    text = Pratik Gayen
+    text = Mateus Simonetti
     color = rgba(242, 243, 244, 0.75)
     font_size = 12
     font_family = SF Pro Display Bold
-    position = 0, -407
+    position = 0, 115
     halign = center
-    valign = center
+    valign = bottom
 }
 
 label {
     monitor =
-    text = Touch ID or Enter Password
+    text = Enter Password
     color = rgba(242, 243, 244, 0.75)
     font_size = 10
     font_family = SF Pro Display
-    position = 0, -438
+    position = 0, 70
     halign = center
-    valign = center
+    valign = bottom
 }
 
 input-field {
@@ -145,7 +145,7 @@ input-field {
     bothlock_color = -1 # when both locks are active. -1 means don't change outer color (same for above)
     invert_numlock = false # change color if numlock is off
     swap_font_color = false # see below
-    position = 0, -468
+    position = 0, 35
     halign = center
-    valign = center
+    valign = bottom
 }
